# platform

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  _config.yml  api.md  architecture.md  buf.gen.yaml  comparison.html  comparison.md  configuration.md  contributing.md  docs.md  faq.md  go.mod  go.sum  index.html  index.md  installation.md  kscale-spec.md  operations.md  quickstart.md  rationale.md  s3-health.md  security.md  storage-format.md
.github/: dependabot.yml  pull_request_template.md
_data/: docs_nav.yml  nav.yml
_docs/: benchmarks.md  configuration.md  development.md  faq.md  helm.md  iceberg-processor.md  index.md  installation.md  lfs-demos.md  lfs-helm.md  lfs-proxy.md  lfs-sdks.md  onboarding-guide.md  operations.md  protocol.md  quickstart.md  roadmap.md  user-guide.md
_includes/: docs-sidebar.html  footer.html  nav.html
_layouts/: default.html  doc.html
deploy/: DEPLOYMENT.md
docs/: development.md  lfs.md  mcp.md  metrics.md  operations.md  protocol.md  quickstart.md  roadmap.md  security.md  storage.md  user-guide.md
examples/: Multi-Listener-Proposal.md
hack/: check_coverage.sh  check_license_headers.py  compare_docs.py
lfs-client-sdk/: Makefile
lfs-client-sdk/python/: README.md  pyproject.toml
lfs-client-sdk/python/lfs_sdk/: envelope.py  producer.py
scripts/: codeql_js_build.sh  codeql_local.sh  demo-platform-apply.sh  demo-platform.sh  ensure_local_node.sh  etcd-load-test.sh  idoc-explode-demo.sh  industrial-lfs-demo.sh  medical-lfs-demo.sh  stage-release-local.sh  test_fuzz.sh  video-lfs-demo.sh
ui/: embed.go  (+1 more)
(+361 files in other folders)
